     theme that will be displayed in Preferences.
   * [theme] name attribute is now expected to be translatable and used only
     for the theme selection UI. Existing [theme]s need to be converted to
     have a separate 'id' attribute.
   * [endlevel] now has two optional subtags [next_scenario_settings],
     [next_scenario_append], which can be used to reconfigure next scenario.
 * Miscellaneous and bug fixes:
   * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
   * Added -Wold-style-cast to the CMake strict flags.
   * Made sure that cmake does not add -NDEBUG for release builds since this
     flag breaks building.
   * Updated screenshots used inside the ingame help and fixed description of
     orbs.
   * Fixed bug #21659: lua location_set:empty now works as described
   * Users now get a warning if they start a multiplayer scenario through the
     title screen load button, as this may cause eras and modifications not
     to work correctly in subsequent scenarios of an mp campaign.
   * Partial fix for bug #21405: The abort option presented when a player
     disconnects from a networked game is now a "save and abort" option.
   * Partial fix for bug #21405: Sides may now be set in an "idle" state when
     a player disconnects from a network game. This does not give any player
     control or vision. To proceed with the game, the host must reassign the
     controller using :control, :droid, or :give_control as usual.
     Related to this, there are new commands :controller which query the 
     controller status, and :idle which toggles the idle status.

Version 1.11.9:
 * Add-ons client:
   * Display the first and last upload dates in the Description dialog.
 * Add-ons server:
   * Record the first upload date and time for new add-ons.
   * Removed ancient compatibility code used only for add-ons stored by some
     1.5.x versions.
 * AI:
   * Default AI: Gold saving is turned off by default again